code/human_written_tests/WebAssembly/processed_control_flow_validation/test_if_19.wast
(assert_invalid
  (module (func $type-empty-f32 (result f32) (if (i32.const 0) (then) (else))))
  "type mismatch"
)